--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -61,7 +61,7 @@ width: 25%
 
 section{
   position: relative;
-
+  overflow: scroll;
   scroll-behavior: smooth;
   scroll-snap-align: start;
   width: 100%;
